jena-shex/src/test/files/spec/negativeSyntax/STRING_LITERAL2-with-LANGTAG-and-datatype.shex
# STRING_LITERAL2 with LANGTAG and datatype
# source: turtle-syntax-bad-LITERAL2_with_langtag_and_datatype.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1> ["value"@en^^<http://a.example/dt>]
}
